# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.towncrier]
package = "step"
filename = "CHANGELOG.md"
issue_format = "`#{issue} <https://github.com/pypa/twine/issues/{issue}>`_"
underlines = ["-", "^"]